--- a/ActFuns.Tools.Excel2Json/ActFuns.Tools.Excel2Json.csproj
+++ b/ActFuns.Tools.Excel2Json/ActFuns.Tools.Excel2Json.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyName>excel2json</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
